recreated manual with Wortsammler 2.0.0.dev4

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -595,7 +595,7 @@
     "Videos": "Videos",
     "vl": "'V' links",
     "voices": "Stimmen",
-    "vpos": "vertikale Position",
+    "vpos": "vert. Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
     "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
