--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -490,7 +490,7 @@
     "Videos": "Videos",
     "vl": "'V' links",
     "voices": "Stimmen",
-    "vpos": "vertikale Position",
+    "vpos": "vert. Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
     "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
