see #248 Search field in configuration editor
* improved labels for one lines
* updated translation
* updated manual

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -198,6 +198,7 @@
     "BUG: worker did not finsh": "**Fehler: Hintergrundberechnung nicht richtig beendet",
     "c_jumplines": "Sprunglinien",
     "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
+    "choose drobox path": "Speicherort auswählen",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
@@ -411,6 +412,7 @@
     "no placeholder value found in ": "kein Wert für Platzhalter gefunden in ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
     "no suitable ABC found": "keine passende ABC Eingabe gefunden",
+    "no template found": "keine Vorlage gefunden",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
@@ -496,6 +498,7 @@
     "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "saveformat": "Seitenformat für pdf",
+    "search": "Suche",
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
@@ -599,6 +602,7 @@
     "vr": "'V' rechts",
     "vt": "'V' oben",
     "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
+    "wildcard": "Joker",
     "wrap": "wrap",
     "wrong placeholder: ": "Fehlerhafter Platzhalter: ",
     "X-position": "X-Position",
