--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -90,6 +90,7 @@
     "BUG: worker did not finsh": "**Fehler: Hintergrundberechnung nicht richtig beendet",
     "c_jumplines": "Sprunglinien",
     "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
+    "choose drobox path": "Speicherort auswählen",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
@@ -304,6 +305,7 @@
     "no placeholder value found in ": "kein Wert für Platzhalter gefunden in ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
     "no suitable ABC found": "keine passende ABC Eingabe gefunden",
+    "no template found": "keine Vorlage gefunden",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
@@ -391,6 +393,7 @@
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "Save": "Speichern",
     "saveformat": "Seitenformat für pdf",
+    "search": "Suche",
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
@@ -494,6 +497,7 @@
     "vr": "'V' rechts",
     "vt": "'V' oben",
     "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
+    "wildcard": "Joker",
     "wrap": "wrap",
     "wrong placeholder: ": "Fehlerhafter Platzhalter: ",
     "X-position": "X-Position",
@@ -514,7 +518,6 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
-
 
 
     "_ende_der_liste": ""
