--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -195,7 +195,7 @@
     "bold": "fettdruck",
     "bottomup": "Spiel aufwärts",
     "BUG: error while initializing Zupfnoter Controller": "BUG: Fehler beim initialisieren. Bitte informiere Zupfpnoter-Entwicklung",
-    "BUG: worker did not finsh": "**Fehler: Hintergrundberechnung nicht richtig beendet",
+    "BUG: worker did not finsh": "Fehler: Hintergrundberechnung nicht richtig beendet",
     "c_jumplines": "Sprunglinien",
     "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
     "choose drobox path": "Speicherort auswählen",
